<resources>
    <string name="app_name">StructF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_screen">Home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--    Auth Screen-->
    <string name="enter_password">enter password</string>
    <string name="password">password</string>
    <string name="enter_email">enter email</string>
    <string name="email">email</string>
    <string name="log_in">Log in</string>

    <!--    Tag Fragment-->
    <string name="go_up">Go up</string>

    <!--    Inner Screen-->
    <string name="clear">clear</string>
    <string name="in">in</string>
    <string name="username">username</string>
    <string name="enter_username">enter username</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="very_long_str">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</string>

</resources>