<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightBlue">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/AllWhite"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintBottom_toTopOf="@id/et_un"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <EditText
        android:id="@+id/et_un"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_style_for_background_hard"
        android:backgroundTint="@color/VLBlue"
        android:hint="@string/enter_username"
        android:paddingLeft="10dp"
        android:textColorHint="@color/Body"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintDimensionRatio="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintWidth_percent="0.7" />


    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/AllWhite"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_style_for_background_hard"
        android:backgroundTint="@color/VLBlue"
        android:hint="@string/enter_email"
        android:paddingLeft="10dp"
        android:textColorHint="@color/Body"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintDimensionRatio="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/AllWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_passw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="@id/guideline9"
        app:layout_constraintTop_toBottomOf="@id/guideline10"
        app:layout_constraintVertical_bias="0.666" />

    <EditText
        android:id="@+id/et_passw"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_style_for_background_hard"
        android:backgroundTint="@color/VLBlue"
        android:hint="@string/enter_password"
        android:paddingLeft="10dp"
        android:textColorHint="@color/Body"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintDimensionRatio="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/VLBlue"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:layout_constraintVertical_bias="0.3"
        app:shapeAppearanceOverlay="@style/round_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/AllWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        app:layout_constraintVertical_bias="0.7" />


</androidx.constraintlayout.widget.ConstraintLayout>